--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -1,1 +1,206 @@
-{"metadata":{"kernelspec":{"language":"python","display_name":"Python 3","name":"python3"},"language_info":{"name":"python","version":"3.10.13","mimetype":"text/x-python","codemirror_mode":{"name":"ipython","version":3},"pygments_lexer":"ipython3","nbconvert_exporter":"python","file_extension":".py"},"kaggle":{"accelerator":"gpu","dataSources":[],"dockerImageVersionId":30648,"isInternetEnabled":true,"language":"python","sourceType":"notebook","isGpuEnabled":true}},"nbformat_minor":4,"nbformat":4,"cells":[{"cell_type":"code","source":"!pip install sacrebleu\n!pip install evaluate\n\nimport evaluate\n\nmetric = evaluate.load(\"sacrebleu\")","metadata":{"execution":{"iopub.status.busy":"2024-02-28T11:13:42.252482Z","iopub.execute_input":"2024-02-28T11:13:42.252923Z","iopub.status.idle":"2024-02-28T11:14:16.600159Z","shell.execute_reply.started":"2024-02-28T11:13:42.25289Z","shell.execute_reply":"2024-02-28T11:14:16.59918Z"},"editable":false,"trusted":true},"execution_count":null,"outputs":[]},{"cell_type":"code","source":"import numpy as np\ndef compute_metrics(eval_preds):\n    print(len(eval_preds))\n    print(eval_preds)\n\n    preds, labels = eval_preds\n    # In case the model returns more than the prediction logits\n    if isinstance(preds, tuple):\n        preds = preds[0]\n\n    decoded_preds = processor.batch_decode(preds, skip_special_tokens=True)\n\n    # Replace -100s in the labels as we can't decode them\n    labels = np.where(labels != -100, labels, processor.tokenizer.pad_token_id)\n    decoded_labels = processor.batch_decode(labels, skip_special_tokens=True)\n\n    # Some simple post-processing\n    decoded_preds = [pred.strip() for pred in decoded_preds]\n    decoded_labels = [[label.strip()] for label in decoded_labels]\n\n    result = metric.compute(predictions=decoded_preds, references=decoded_labels)\n    return {\"bleu\": result[\"score\"]}","metadata":{"execution":{"iopub.status.busy":"2024-02-28T12:58:12.022256Z","iopub.execute_input":"2024-02-28T12:58:12.023092Z","iopub.status.idle":"2024-02-28T12:58:12.037078Z","shell.execute_reply.started":"2024-02-28T12:58:12.023048Z","shell.execute_reply":"2024-02-28T12:58:12.036178Z"},"editable":false,"trusted":true},"execution_count":null,"outputs":[]},{"cell_type":"code","source":"training_args = TrainingArguments(\n    output_dir=f\"{model_name}-MedEdefics\",\n    learning_rate=2e-4,\n    fp16=True,\n    per_device_train_batch_size=1,\n    per_device_eval_batch_size=1,\n    gradient_accumulation_steps=8,\n    dataloader_pin_memory=False,\n    save_total_limit=3,\n    evaluation_strategy=\"steps\",\n    save_strategy=\"steps\",\n    save_steps=40,\n    eval_steps=20,\n    logging_steps=20,\n    max_steps=40,\n    remove_unused_columns=False,\n    push_to_hub=False,\n    label_names=[\"labels\"],\n    load_best_model_at_end=True,\n    report_to=None,\n    optim=\"paged_adamw_8bit\",\n)\n\ntrainer = Trainer(\n    model=model,\n    args=training_args,\n    train_dataset=train_ds,\n    eval_dataset=train_ds,\n    compute_metrics=compute_metrics,\n)\n\ntrainer.evaluate()\n#trainer.train()","metadata":{"execution":{"iopub.status.busy":"2024-02-28T12:58:15.607616Z","iopub.execute_input":"2024-02-28T12:58:15.608269Z","iopub.status.idle":"2024-02-28T12:58:15.936927Z","shell.execute_reply.started":"2024-02-28T12:58:15.608242Z","shell.execute_reply":"2024-02-28T12:58:15.93572Z"},"editable":false,"trusted":true},"execution_count":null,"outputs":[]},{"cell_type":"code","source":"!pip install uptrain sqlite_utils","metadata":{"execution":{"iopub.status.busy":"2024-02-28T19:10:31.664785Z","iopub.execute_input":"2024-02-28T19:10:31.665357Z","iopub.status.idle":"2024-02-28T19:10:44.698951Z","shell.execute_reply.started":"2024-02-28T19:10:31.665326Z","shell.execute_reply":"2024-02-28T19:10:44.697851Z"},"editable":false,"trusted":true},"execution_count":null,"outputs":[]},{"cell_type":"code","source":"import openai\nfrom openai import OpenAI\nimport pandas as pd\n\nGPT_API_KEY = \n\n# Function to translate a single sentence\nclient = OpenAI(\n  api_key=GPT_API_KEY,\n)\n\n\ndef generate_gpt(prompt):\n    completion = client.chat.completions.create(\n      model=\"gpt-4-turbo-preview\",\n      response_format={ \"type\": \"json_object\" },\n      messages=[\n        {\"role\": \"user\", \"content\": prompt}\n      ],\n      temperature=0,\n      logprobs=True,\n    )\n\n    return completion.choices[0].message.content, completion.choices[0].logprobs","metadata":{},"execution_count":null,"outputs":[]},{"cell_type":"code","source":"def get_prompt(question, response, ground_truth):\n    Prompt = f\"\"\"\n    ###Task Description:\n    You will be provided with a potential answer along with a ground truth answer to a given question. Your task is to evaluate the potential answer if it’s matching the ground truth answer.\n    Evaluation Steps:\n    1. Write a detailed feedback that assess the matching of the response strictly based on the given score rubric, not evaluating in general.\n    2. After writing a feedback, Assign a score for coherence on a scale of 1 to 5, where 1 is the lowest and 5 is the highest based on the Score Rubrics.\n    3. The output format should look as follows: [RESULT] (an integer number between 1 and 5)\\\"\n    4. Please do not generate any other opening, closing, and explanations.\n    ###The instruction to evaluate:\n    {question}\n    ###Response to evaluate:\n    {response}\n    ###Reference Answer:\n    {ground_truth}\n    ###Score Rubrics:\n    Score (from 1 to 5): “Response Match: Evaluate how much the evaluated answer matches the true answer.”\n    Score (from 1 to 5): “Completeness: Evaluate if the evaluated answer covers all key aspects mentioned in the true answer. ”\n    ###Feedback (scores ONLY): \n    the output should be in the json format like this :\n    (Response Match: score from 1 to 5)\n    (Completeness: score from 1 to 5)\n    \"\"\"\n    return Prompt","metadata":{"execution":{"iopub.status.busy":"2024-02-28T21:00:51.724462Z","iopub.execute_input":"2024-02-28T21:00:51.724892Z","iopub.status.idle":"2024-02-28T21:00:51.731121Z","shell.execute_reply.started":"2024-02-28T21:00:51.724863Z","shell.execute_reply":"2024-02-28T21:00:51.730134Z"},"editable":false,"trusted":true},"execution_count":null,"outputs":[]},{"cell_type":"code","source":"import json\ndata = {\n        \"question\" : \"What is the formula of chlorophyll\",\n        'response' : 'Chlorophyll is the pigmet used in photosynthesis, it helpes in generating oxygen. C55H72MgN4O5',\n        'ground_truth' : 'The formula of chlorophyll is C55H72MgN4O5'\n    }\n\nprompt = get_prompt(data['question'], data['response'], data['ground_truth'])\nfeedback, proba = generate_gpt(prompt)\nprint(feedback)\n","metadata":{"execution":{"iopub.status.busy":"2024-02-28T21:00:53.993158Z","iopub.execute_input":"2024-02-28T21:00:53.99363Z","iopub.status.idle":"2024-02-28T21:00:56.679506Z","shell.execute_reply.started":"2024-02-28T21:00:53.993601Z","shell.execute_reply":"2024-02-28T21:00:56.678611Z"},"editable":false,"trusted":true},"execution_count":null,"outputs":[]},{"cell_type":"code","source":"def compute_score(feedback, probas):\n    feedback = eval(feedback)\n    probs = []\n    for token in proba.content:\n        try:\n            token_value = int(token.token)\n            probs.append(np.exp(token.logprob))\n        except ValueError:\n            pass\n        \n    score1 = feedback[\"Response Match\"]\n    score2 = feedback[\"Completeness\"]\n    scores = [score1, score2]\n    weighted_scores = [score * prob for score, prob in zip(scores, probs)]\n    final_weighted_score = np.mean(weighted_scores)\n    return final_weighted_score","metadata":{"execution":{"iopub.status.busy":"2024-02-28T21:15:58.992517Z","iopub.execute_input":"2024-02-28T21:15:58.993224Z","iopub.status.idle":"2024-02-28T21:15:59.000077Z","shell.execute_reply.started":"2024-02-28T21:15:58.993193Z","shell.execute_reply":"2024-02-28T21:15:58.999046Z"},"editable":false,"trusted":true},"execution_count":null,"outputs":[]},{"cell_type":"code","source":"def G_eval(data):\n    scores = [compute_score(feedback, probas) for feedback, probas in [generate_gpt(get_prompt(data['question'], data['response'], data['ground_truth'])) for data in data]]\n    return scores","metadata":{"execution":{"iopub.status.busy":"2024-02-28T21:18:40.97725Z","iopub.execute_input":"2024-02-28T21:18:40.978464Z","iopub.status.idle":"2024-02-28T21:18:40.983505Z","shell.execute_reply.started":"2024-02-28T21:18:40.97839Z","shell.execute_reply":"2024-02-28T21:18:40.982621Z"},"editable":false,"trusted":true},"execution_count":null,"outputs":[]},{"cell_type":"code","source":"good_data = [\n    {\n        \"question\" : \"What is the formula of chlorophyll\",\n        'response' : 'Chlorophyll a pigment usuall found in the leaves has the formula C55H72MgN4O5.',\n        'ground_truth' : 'The formula of chlorophyll is C55H72MgN4O5'\n    }\n]\n\nbad_data = [\n    {\n        \"question\" : \"What is the formula of chlorophyll\",\n        'response' : 'Chlorophyll is the pigmet used in photosynthesis, it helpes in generating oxygen',\n        'ground_truth' : 'The formula of chlorophyll is C55H72MgN4O5'\n    }\n]\n\ndata = good_data + bad_data\nG_eval(data)","metadata":{"execution":{"iopub.status.busy":"2024-02-28T21:18:41.39353Z","iopub.execute_input":"2024-02-28T21:18:41.393883Z","iopub.status.idle":"2024-02-28T21:18:45.184942Z","shell.execute_reply.started":"2024-02-28T21:18:41.393856Z","shell.execute_reply":"2024-02-28T21:18:45.18392Z"},"editable":false,"trusted":true},"execution_count":null,"outputs":[]},{"cell_type":"code","source":"# import torch\n# from transformers import AutoTokenizer, LlamaForCausalLM\n\n# tokenizer = AutoTokenizer.from_pretrained(\"meta-llama/Llama-2-7b-chat-hf\")\n# model = LlamaForCausalLM.from_pretrained(\"kaist-ai/Prometheus-7b-v1.0\", device_map=\"auto\")\n","metadata":{"execution":{"iopub.status.busy":"2024-02-28T20:52:42.389348Z","iopub.execute_input":"2024-02-28T20:52:42.390256Z","iopub.status.idle":"2024-02-28T20:52:42.394333Z","shell.execute_reply.started":"2024-02-28T20:52:42.390223Z","shell.execute_reply":"2024-02-28T20:52:42.393346Z"},"editable":false,"trusted":true},"execution_count":null,"outputs":[]},{"cell_type":"code","source":"from uptrain import EvalLLM, ResponseMatching\nimport json\n\nOPENAI_API_KEY =\n\n\ngood_data = [\n    {\n        \"question\" : \"What is the formula of chlorophyll\",\n        'response' : 'Chlorophyll a pigment usuall found in the leaves has the formula C55H72MgN4O5.',\n        'ground_truth' : 'The formula of chlorophyll is C55H72MgN4O5'\n    }\n]\n\nbad_data = [\n    {\n        \"question\" : \"What is the formula of chlorophyll\",\n        'response' : 'Chlorophyll is the pigmet used in photosynthesis, it helpes in generating oxygen',\n        'ground_truth' : 'The formula of chlorophyll is C55H72MgN4O5'\n    }\n]\n\ndata = good_data + bad_data\n\neval_llm = EvalLLM(openai_api_key=OPENAI_API_KEY)\n\nres = eval_llm.evaluate(\n    data = data,\n    checks = [ResponseMatching(method = 'llm')]    # method: llm/exact/rouge\n)","metadata":{},"execution_count":null,"outputs":[]},{"cell_type":"code","source":"print(json.dumps(res, indent=3))","metadata":{"execution":{"iopub.status.busy":"2024-02-28T20:58:46.775507Z","iopub.execute_input":"2024-02-28T20:58:46.775881Z","iopub.status.idle":"2024-02-28T20:58:46.780614Z","shell.execute_reply.started":"2024-02-28T20:58:46.775853Z","shell.execute_reply":"2024-02-28T20:58:46.779677Z"},"editable":false,"trusted":true},"execution_count":null,"outputs":[]},{"cell_type":"code","source":"","metadata":{"editable":false},"execution_count":null,"outputs":[]}]}
+{
+  "cells": [
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "mOdJswF4zevm"
+      },
+      "outputs": [],
+      "source": [
+        "import openai\n",
+        "from openai import OpenAI\n",
+        "import pandas as pd\n",
+        "\n",
+        "GPT_API_KEY = GPT_API_KEY\n",
+        "\n",
+        "# Function to translate a single sentence\n",
+        "client = OpenAI(\n",
+        "  api_key=GPT_API_KEY,\n",
+        ")\n",
+        "\n",
+        "\n",
+        "def generate_gpt(prompt):\n",
+        "    completion = client.chat.completions.create(\n",
+        "      model=\"gpt-4-turbo-preview\",\n",
+        "      response_format={ \"type\": \"json_object\" },\n",
+        "      messages=[\n",
+        "        {\"role\": \"user\", \"content\": prompt}\n",
+        "      ],\n",
+        "      temperature=0,\n",
+        "      logprobs=True,\n",
+        "    )\n",
+        "\n",
+        "    return completion.choices[0].message.content, completion.choices[0].logprobs"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "editable": false,
+        "execution": {
+          "iopub.execute_input": "2024-02-28T21:00:51.724892Z",
+          "iopub.status.busy": "2024-02-28T21:00:51.724462Z",
+          "iopub.status.idle": "2024-02-28T21:00:51.731121Z",
+          "shell.execute_reply": "2024-02-28T21:00:51.730134Z",
+          "shell.execute_reply.started": "2024-02-28T21:00:51.724863Z"
+        },
+        "id": "v2hhbIQEzevn"
+      },
+      "outputs": [],
+      "source": [
+        "def get_prompt(question, response, ground_truth):\n",
+        "    Prompt = f\"\"\"\n",
+        "    ###Task Description:\n",
+        "    You will be provided with a potential answer along with a ground truth answer to a given question. Your task is to evaluate the potential answer if it’s matching the ground truth answer.\n",
+        "    Evaluation Steps:\n",
+        "    1. Write a detailed feedback that assess the matching of the response strictly based on the given score rubric, not evaluating in general.\n",
+        "    2. After writing a feedback, Assign a score for responses matching either 1 or 0, where 1 is the answer matches the ground-truth, wheras 0 when there is no match.\n",
+        "    3. The output format should look as follows: [RESULT] (either 1 or 0)\\\"\n",
+        "    4. Please do not generate any other opening, closing, and explanations.\n",
+        "    ###The instruction to evaluate:\n",
+        "    {question}\n",
+        "    ###Response to evaluate:\n",
+        "    {response}\n",
+        "    ###Reference Answer:\n",
+        "    {ground_truth}\n",
+        "    ###Score Rubrics:\n",
+        "    Score (0 or 1): “Response Match: Evaluate how much the evaluated answer matches the true answer.”\n",
+        "    ###Feedback (scores ONLY):\n",
+        "    the output should be in the json format like this :\n",
+        "    (Response Match: score 0 or 1)\n",
+        "    \"\"\"\n",
+        "    return Prompt"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "editable": false,
+        "execution": {
+          "iopub.execute_input": "2024-02-28T21:00:53.99363Z",
+          "iopub.status.busy": "2024-02-28T21:00:53.993158Z",
+          "iopub.status.idle": "2024-02-28T21:00:56.679506Z",
+          "shell.execute_reply": "2024-02-28T21:00:56.678611Z",
+          "shell.execute_reply.started": "2024-02-28T21:00:53.993601Z"
+        },
+        "id": "9HngCGZ7zevo"
+      },
+      "outputs": [],
+      "source": [
+        "import json\n",
+        "data = {\n",
+        "        \"question\" : \"What is the formula of chlorophyll\",\n",
+        "        'response' : 'Chlorophyll is the pigmet used in photosynthesis, it helpes in generating oxygen. C55H72MgN4O5',\n",
+        "        'ground_truth' : 'The formula of chlorophyll is C55H72MgN4O5'\n",
+        "    }\n",
+        "\n",
+        "prompt = get_prompt(data['question'], data['response'], data['ground_truth'])\n",
+        "feedback = generate_gpt(prompt)\n",
+        "print(feedback)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "editable": false,
+        "execution": {
+          "iopub.execute_input": "2024-02-28T21:18:40.978464Z",
+          "iopub.status.busy": "2024-02-28T21:18:40.97725Z",
+          "iopub.status.idle": "2024-02-28T21:18:40.983505Z",
+          "shell.execute_reply": "2024-02-28T21:18:40.982621Z",
+          "shell.execute_reply.started": "2024-02-28T21:18:40.97839Z"
+        },
+        "id": "8YS60qiqzevp"
+      },
+      "outputs": [],
+      "source": [
+        "def G_eval(data):\n",
+        "    scores = [compute_score(feedback) for feedback in [generate_gpt(get_prompt(data['question'], data['response'], data['ground_truth'])) for data in data]]\n",
+        "    return scores"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "editable": false,
+        "execution": {
+          "iopub.execute_input": "2024-02-28T21:18:41.393883Z",
+          "iopub.status.busy": "2024-02-28T21:18:41.39353Z",
+          "iopub.status.idle": "2024-02-28T21:18:45.184942Z",
+          "shell.execute_reply": "2024-02-28T21:18:45.18392Z",
+          "shell.execute_reply.started": "2024-02-28T21:18:41.393856Z"
+        },
+        "id": "Quxvde5Ozevq"
+      },
+      "outputs": [],
+      "source": [
+        "good_data = [\n",
+        "    {\n",
+        "        \"question\" : \"What is the formula of chlorophyll\",\n",
+        "        'response' : 'Chlorophyll a pigment usuall found in the leaves has the formula C55H72MgN4O5.',\n",
+        "        'ground_truth' : 'The formula of chlorophyll is C55H72MgN4O5'\n",
+        "    }\n",
+        "]\n",
+        "\n",
+        "bad_data = [\n",
+        "    {\n",
+        "        \"question\" : \"What is the formula of chlorophyll\",\n",
+        "        'response' : 'Chlorophyll is the pigmet used in photosynthesis, it helpes in generating oxygen',\n",
+        "        'ground_truth' : 'The formula of chlorophyll is C55H72MgN4O5'\n",
+        "    }\n",
+        "]\n",
+        "\n",
+        "data = good_data + bad_data\n",
+        "G_eval(data)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "editable": false,
+        "id": "80ujD32-zevs"
+      },
+      "outputs": [],
+      "source": []
+    }
+  ],
+  "metadata": {
+    "kaggle": {
+      "accelerator": "gpu",
+      "dataSources": [],
+      "dockerImageVersionId": 30648,
+      "isGpuEnabled": true,
+      "isInternetEnabled": true,
+      "language": "python",
+      "sourceType": "notebook"
+    },
+    "kernelspec": {
+      "display_name": "Python 3 (ipykernel)",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.7"
+    },
+    "colab": {
+      "provenance": []
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
+}
